2005-09-08  Flavio Oliveira  <flavio.oliveira@indt.org.br>

	* ext/jpeg/Makefile.am:
	* ext/jpeg/gstjpeg.c
	* ext/jpeg/gstjpegenc.c:
	* ext/jpeg/gstsmokeenc.c:

2005-09-07  Stefan Kost  <ensonic@users.sf.net>

	* ext/flac/gstflacdec.c:
	* ext/flac/gstflacenc.c:
	* ext/flac/gstflactag.c:
	* ext/speex/gstspeexenc.c:
	  gsttaginterface.h -> gsttagsetter.h

2005-09-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* configure.ac:
	* gst/debug/Makefile.am:
	* gst/debug/efence.c: (gst_efence_class_init), (gst_efence_init),
	(gst_efence_chain), (gst_efence_buffer_alloc), (plugin_init),
	(gst_fenced_buffer_finalize), (gst_fenced_buffer_copy),
	(gst_fenced_buffer_alloc), (gst_fenced_buffer_class_init),
	(gst_fenced_buffer_init), (gst_fenced_buffer_get_type):
	  Port to 0.9 and re-enable efence plugin.

2005-09-06  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacdec.c: (flac_caps_factory), (raw_caps_factory),
	(gst_flacdec_write), (gst_flacdec_convert_src):
	* ext/flac/gstflacdec.h:
	  Add support for flac files with 24/32 bits per sample; and misc.
	  minor clean-ups. Seeking is still partly broken (for me at least).

2005-09-06  Wim Taymans  <wim@fluendo.com>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpmp4vdec.c: (gst_rtpmp4vdec_get_type),
	(gst_rtpmp4vdec_base_init), (gst_rtpmp4vdec_class_init),
	(gst_rtpmp4vdec_init), (gst_rtpmp4vdec_setcaps),
	(gst_rtpmp4vdec_chain), (gst_rtpmp4vdec_set_property),
	(gst_rtpmp4vdec_get_property), (gst_rtpmp4vdec_change_state),
	(gst_rtpmp4vdec_plugin_init):
	* gst/rtp/gstrtpmp4vdec.h:
	* gst/rtp/gstrtpmp4venc.c: (gst_rtpmp4venc_get_type),
	(gst_rtpmp4venc_base_init), (gst_rtpmp4venc_class_init),
	(gst_rtpmp4venc_init), (gst_rtpmp4venc_setcaps),
	(gst_rtpmp4venc_flush), (gst_rtpmp4venc_chain),
	(gst_rtpmp4venc_set_property), (gst_rtpmp4venc_get_property),
	(gst_rtpmp4venc_change_state), (gst_rtpmp4venc_plugin_init):
	* gst/rtp/gstrtpmp4venc.h: